Bug 397620 - Validate boolean arguments. r+sr+a=roc