content/svg/content/src/nsSVGBoolean.cpp
@@ -74,10 +74,12 @@ nsSVGBoolean::GetBaseValueString(nsAString & aValueAsString)
 }
 
 void
-nsSVGBoolean::SetBaseValue(int aValue,
+nsSVGBoolean::SetBaseValue(PRBool aValue,
                            nsSVGElement *aSVGElement,
                            PRBool aDoSetAttr)
 {
+  NS_PRECONDITION(aValue == PR_TRUE || aValue == PR_FALSE, "Boolean out of range");
+
   mAnimVal = mBaseVal = aValue;
   aSVGElement->DidChangeBoolean(mAttrEnum, aDoSetAttr);
 }
